# ChangeLog for net-nntp/nzb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 May 2008; deface <deface@uberpenguin.net> +nzb-0.1.7.ebuild,
  +metadata.xml:
  New Ebuild for 220195
