@@ -1,4 +1,4 @@
 DIST nzb-0.1.7.tar.gz 41118 RMD160 bbd74dcb6196aafb09191847e5d4ff8b54c4a072 SHA1 2f00ddf22afe8e5db7f1ae4a01174e40d6520f52 SHA256 d68fe6777078ad2fa7b55fac78eef3762b05e5587372dabb479f2a3d5e728f6a
-EBUILD nzb-0.1.7.ebuild 617 RMD160 c05dfbd8695ebddee5173db8698fe7f887a39aa0 SHA1 d547d580c4a30fff4109e640ab6264103f13bc10 SHA256 179a762f92205f22faead0a43d344109ef034718448e06d617b586e3114f87b7
-MISC ChangeLog 221 RMD160 a0e8398078be8a571fb0a047e3b1fdd91f9907fd SHA1 26316a6f872a5fbfb06c2061d01597ad7ae417c0 SHA256 268e5328e10f46ed8a5172a6de29df2350fa7d2ef285df3b6359f5316d8d697f
+EBUILD nzb-0.1.7.ebuild 596 RMD160 b163542825a826e2fe942f2258096a2945651ef1 SHA1 5e45d20070f4c9c7290d09ac132d89c7f346b84e SHA256 80375dfc0a88bccda41d20b7cfedcdab31f836590edacc6cc78c8a22f58a1275
+MISC ChangeLog 358 RMD160 186bedbafa59790eeef6ea25dae7461469cdfd6d SHA1 ae4db4e39473af9550827b7ad1d897e030d471ef SHA256 a325ff00eb642eed2c67b4bbd8eb58b46d3447afb8adc89699c710e71b617b7d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
